Try adding word-wrap too, to fix iphones

--- a/addons/wsca_config/static/src/css/veme/veme_01_theme_buttons.css
+++ b/addons/wsca_config/static/src/css/veme/veme_01_theme_buttons.css
@@ -1,3 +1,4 @@
 #fsoforms_submit_button {
     text-wrap: wrap;
+    word-wrap: normal;
 }
